--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@ body {
 
 <body>
 <h1>SmartisanOS for Redmi Note 4X(Snap).</h1>
-<p>Alpha version: <a href="about:blank</a>Download</p>
+<p>Alpha version: <a href="about:blank"Download</a></p>
 </body>
 </html>
