--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@ body {
 
 <body>
 <h1>SmartisanOS for Redmi Note 4X(Snap).</h1>
-<p>Alpha version: <a href="https://pan.baidu.com/s/17_27FWkPTT8Inx_ikl6BBw">Download</a></p>
+<p><strong>Alpha version:</strong> <a href="https://pan.baidu.com/s/17_27FWkPTT8Inx_ikl6BBw">Download</a></p>
+<p><strong>Update Log:</strong></p>
+<p>- Release</p>
+<p><strong>Bugs:</strong></p>
+<p>- Cannot complete flash(Error 6)
 </body>
 </html>
