--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@ body {
 <p><strong>Update Log:</strong></p>
 <p>- Release</p>
 <p><strong>Bugs:</strong></p>
-<p>- Cannot complete flash(Error 6)
+<p>- Cannot complete flashing(Error 6)
 </body>
 </html>
