--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@ body {
 
 <body>
 <h1>SmartisanOS for Redmi Note 4X(Snap).</h1>
+<p><strong>V1D4:<strong> <a href="https://pan.baidu.com/s/1WhXlBuyW4Oq9Sf1m6NRwKA">Download</a></p>
+<p><strong>Update Log:</strong></p>
+<p>- Fix the Bug "The System Has Been Destory"</p>
+<p><strong>Bugs:</strong></p>
+<p>- None</p>
+<br />
 <p><strong>Alpha version:</strong> <a href="https://pan.baidu.com/s/17_27FWkPTT8Inx_ikl6BBw">Download</a></p>
 <p><strong>Update Log:</strong></p>
 <p>- Release</p>
