--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@ body {
 
 <body>
 <h1>SmartisanOS for Redmi Note 4X(Snap).</h1>
+<p><strong>V1D6:</strong></p>
+<p><strong>Update Log:</strong></p>
+<p>- Change the based-firmware to MoKee</p>
+<br />
 <p><strong>V1D4:</strong> <a href="https://pan.baidu.com/s/1WhXlBuyW4Oq9Sf1m6NRwKA">Download</a></p>
 <p><strong>Update Log:</strong></p>
 <p>- Fix the Bug "The System Has Been Destory"</p>
